# mpl-interactions

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  Examples.ipynb  LICENSE.txt  MANIFEST.in  README.md  environment.yml  ipympl_interactions.py  jupyter_jukebox.py  postBuild  pyproject.toml  pytest.ini  readthedocs.yml  release.md  release.sh  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/ISSUE_TEMPLATE/workflows/: test.yml
.github/workflows/: linkcheck.yml  lint.yml  main.yml  mpl-master-test.yml  publish.yml  test.yml
docs/: .gitignore  API.rst  Backends.md  Backends.rst  Contributing.md  Contributing.rst  Examples.rst  Functions.rst  Gallery.rst  Installation.md  Installation.rst  Makefile  compare-to-ipywidgets.md  compare-to-ipywidgets.rst  conf.py  contributing.md  functions.rst  gifmaker.py  index.md  index.rst  install.md  requirements.txt
docs/_build/doctrees/: Examples.doctree  Installation.doctree  environment.pickle  functions.doctree  index.doctree
docs/_build/doctrees/examples/: single_param_interact.doctree
docs/_build/doctrees/nbsphinx/examples/: single_param_interact.ipynb
docs/_build/html/: Examples.html  Installation.html  functions.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: Examples.rst.txt
docs/_build/html/_sources/examples/: heatmap_slicer.nblink.txt
docs/_build/html/examples/: heatmap_slicer.html  heatmap_slicer.ipynb  single_param_interact.html  single_param_interact.ipynb
docs/_static/: custom.css
docs/_static/css/: custom.css
docs/_static/images/: how-to-embed-gif.apng  imshow-basic.apng  imshow-no-cmap-auto.apng  imshow-subplots.apng  imshow-threshold.apng  plot-categorical.apng  scatter-selector-stocks.apng  usage-basic.apng  usage-categorical.apng  usage-fixed.apng  usage-index-controls.apng  usage-mixed-types.apng  usage-multi-func.apng  usage-rangeslider.apng  usage-styling.apng  usage-tuple-params.apng
docs/_templates/: module.rst_t  package.rst_t
docs/examples/: Lotka-Volterra.ipynb  Usage-Guide.ipynb  ada-mask.npy  animations.ipynb  context.ipynb  custom-callbacks.ipynb  embed_heatmap_slicer_tk.py  heatmap-slicer.ipynb  heatmap-slicer.rst  hist.ipynb  hyperslicer.ipynb  hyperslicer.rst  image-segmentation-multiple-images.ipynb  image-segmentation.ipynb  image-segmentation.rst  imshow.ipynb  interactive_plot-examples.nblink  jupyter-notebooks.rst  lotka-volterra.ipynb  mpl-sliders.ipynb  mpl-sliders.py  mpl-sliders.rst  non-ipympl-backends.ipynb  plot.ipynb  pyplot-notebook.rst  range-sliders.ipynb  rossler-attractor.ipynb  scalar-arguments.ipynb  scatter-plots.rst  scatter-selector.ipynb  scatter.ipynb  text-annotations.ipynb  tidbits.md  tidbits.rst  usage.ipynb  zoom-factory.ipynb  zoom_and_pan.nblink
docs/examples/devlop/: README.md  devlop-axline.ipynb  devlop-base.ipynb  devlop-controller.ipynb  devlop-imshow.ipynb  devlop-scatter.ipynb
docs/examples/gallery/: README.md  _gen_images.py  _heatmap_slicer-playback.json  _playback.py  heatmap_slicer.py  mpl-sliders-same-figure.py
docs/examples/tidbits/: play-button.rst  play-buttons.ipynb
docs/html/: .buildinfo  genindex.html  searchindex.js
docs/html/_sources/: Installation.rst.txt
docs/html/_sources/examples/: single_param_interact.nblink.txt
docs/html/examples/: single_param_interact.html  single_param_interact.ipynb
examples/: Lotka-Volterra.ipynb  Usage-Guide.ipynb  animations.ipynb  custom-callbacks.ipynb  devlop!.ipynb  embed_heatmap_slicer_tk.py  heatmap-slicer.ipynb  heatmap_slicer.ipynb  hist.ipynb  hyperslicer.ipynb  image-segmentation.ipynb  image-segmenting.ipynb  imshow.ipynb  interactive_imshow.ipynb  interactive_plot-examples.ipynb  interactive_scatter.ipynb  minimal_hyperslicer.ipynb  mpl-sliders-same-figure.py  mpl-sliders.ipynb  mpl-sliders.py  non-ipympl-backends.ipynb  plot.ipynb  range-sliders.ipynb  rossler-attractor.ipynb  scalar-arguments.ipynb  scatter-selector.ipynb  scatter.ipynb  single_param_interact.ipynb  wealth-of-nations_interactive_scatter.ipynb  zoom-factory.ipynb  zoom_factory-example.ipynb
examples/data/: stock-prices.npz
examples/devlop/: README.md  devlop-axline.ipynb  devlop-base.ipynb  devlop-controller.ipynb  devlop-imshow.ipynb  devlop-scatter.ipynb
examples/gallery/: README.md  README.rst  _gen_images.py  _heatmap_slicer-playback.json  _mpl-sliders-same-figure-playback.json  heatmap_slicer.py
examples/tidbits/: play-buttons.ipynb
ipympl_interactions/: __init__.py  generic.py
jupyter_jukebox/: jupyter_jukebox.py
mpl_interactions/: __init__.py  _version.py  _widget_backfill.py  controller.py  deprecations.py  generic.py  helpers.py  ipyplot.py  jupyter.py  mpl_kwargs.py  pyplot.py  utils.py  widgets.py  xarray_helpers.py
mpl_interactions/tests/: test_controls.py  test_generic.py  test_helpers.py  test_pyplot.py
paper/: paper.bib  paper.md
tests/: _util.py  test_controls.py  test_generic.py  test_helpers.py  test_pyplot.py
