[metadata]
name = mpl_interactions
author = Ian Hunt-Isaak
author_email = ianhuntisaak@gmail.com
maintainer_email = ianhuntisaak@gmail.com
description = Matplotlib aware interact functions
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/mpl-extensions/mpl-interactions/issues
    Changelog = https://github.com/mpl-extensions/mpl-interactions/releases
    Documentation = https://mpl-interactions.rtfd.io
    Source = https://github.com/mpl-extensions/mpl-interactions
classifiers =
    Framework :: Jupyter
    Framework :: Matplotlib
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    IPython
    Jupyter
    Matplotlib
    Widgets
license = BSD
platforms = Linux, Mac OS X, Windows

[options]
python_requires = >=3.6
install_requires =
    matplotlib >= 3.4
packages = find:

[options.extras_require]
jupyter =
    ipywidgets >= 7.5.0
    ipympl >= 0.5.8

; Developer requirements
doc =
    %(jupyter)s
    jupyter-sphinx
    mpl-playback >= 0.1.1
    myst-nb
    numpydoc
    Sphinx >= 1.5
    sphinx-book-theme
    sphinx-copybutton
    sphinx-gallery >= 0.8.2
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton
    xarray
sty =
    black
    isort
test =
    nbval
    pandas
    PyQt5
    pytest
    pytest-mpl
    requests
    scipy
    xarray
dev =
    %(doc)s
    %(jupyter)s
    %(sty)s
    %(test)s
    pre-commit
    sphinx-autobuild
    tox >= 1.9  # for skip_install, use_develop

[flake8]
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503, E501, E231, W291
per-file-ignores =
    */__init__.py: F401, F403
    mpl_interactions/ipyplot.py: F401
    tests/test_pyplot.py: F811
